--- a/client/src/components/card1/Card1.module.css
+++ b/client/src/components/card1/Card1.module.css
@@ -11,14 +11,17 @@
 }
 
 .text{
+    padding: 20px;
     background-color: #f5f5f5;
     border-radius: 10px;
     height: 90%;
     width: 45%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    font-size: larger;
+    color: rgba(53, 59, 120);
 }
 
 .image{
