--- a/client/src/components/card1/Card1.module.css
+++ b/client/src/components/card1/Card1.module.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: larger;
+    font-size: medium;
     color: rgba(53, 59, 120);
 }
 
