--- a/client/src/components/card2/Card2.module.css
+++ b/client/src/components/card2/Card2.module.css
@@ -1,5 +1,6 @@
 .container{
     background-color: rgba(53, 59, 120, 0.400);
+    box-shadow: 0px 0px 4px 2px rgba(53, 59, 120, 0.400);
     border-radius: 10px;
     height: 50vh;
     width: 90vw;
@@ -13,6 +14,7 @@
 .text{
     padding: 20px;
     background-color: #f5f5f5;
+    box-shadow: 0px 0px 4px 2px #f5f5f5;
     border-radius: 10px;
     height: 90%;
     width: 45%;
