--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -1,6 +1,7 @@
 .container{
     /* background-color: rgb(53, 59, 120); */
-    background-color: rgb(255, 153, 204);
+    /* background-color: rgb(255, 153, 204); */
+    box-shadow: 0px 0px 4px 2px #353b78;
     background-image: linear-gradient(to right top, #ff99cc, #ce7ebb, #9c66a8, #6a5091, #353b78);
     display: flex;
     justify-content: space-around;
@@ -41,7 +42,8 @@
     /* background-image: linear-gradient(to right, #f5f5f5, #ebebeb, #e1e0e1, #d7d6d6, #cdcccc); */
     /* background-image: linear-gradient(to left bottom, #ff99cc, #ce7ebb, #9c66a8, #6a5091, #353b78); */
     background-color: rgb(255, 153, 204);
-    border: 1px solid black;
+    box-shadow: 0px 0px 4px 2px rgb(255, 153, 204);   
+    /* border: 1px solid black; */
     border-radius: 10px;
     padding: 10px;
     color: black;
